ES correction (posesive pronoun+optional tag)

--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -939,7 +939,7 @@
       </notes>
       <segment>
         <source>Mein Haus ausbauen</source>
-        <target>Mejora mi casa</target>
+        <target>Mejora tu casa (opcional)</target>
       </segment>
     </unit>
     <unit id="J53z_38">
