ES correction (extra comma (,) )

--- a/translations/buildings+intl-icu.es.xlf
+++ b/translations/buildings+intl-icu.es.xlf
@@ -2310,7 +2310,7 @@
       </notes>
       <segment>
         <source>Ein simpler Verteidigungsgegenstand, aber du wirst ihn zu schätzen wissen, wenn dein Ex-Nachbar Kevo versuchen sollte, an deinem Gehirn rumzuknabbern..</source>
-        <target>Puede parecer muy simple pero estarás contento de tener uno cuando, Carlos, tu antiguo vecino, venga para comerte los sesos.</target>
+        <target>Puede parecer muy simple pero estarás contento de tener uno cuando BOSSU, tu antiguo vecino, venga para comerte los sesos.</target>
       </segment>
     </unit>
     <unit id="Wv2Tkzm">
