ES Dump rename (Libre -> Gratuito)

--- a/translations/buildings+intl-icu.es.xlf
+++ b/translations/buildings+intl-icu.es.xlf
@@ -1528,7 +1528,7 @@
       </notes>
       <segment>
         <source>Müll für Alle</source>
-        <target>Vertedero libre</target>
+        <target>Vertedero gratuito</target>
       </segment>
     </unit>
     <unit id="NNvtYXk" name="Waffenabfall">
