ES Correction (camper bonus desc)

--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -7121,7 +7121,7 @@
       </notes>
       <segment>
         <source>Du hast die letzte Nacht in der Kälte der Außenwelt verbracht. Dabei konntest du die Windrichtung und den Marsch der Zombiehorde beobachten. Damit bist du für den Rest des Tages in der Lage, erfolgreicher Gegenstände zu finden.</source>
-        <target>Pasaste la última noche fuera, soportando el frío del Ultramundo. Fuiste capaz de observar los áridos vientos desérticos y el movimiento de las hordas de zombis. Gracias a la agudeza de tus observaciones hoy gozarás de un bonus al excavar.</target>
+        <target>Pasaste la última noche fuera, soportando el frío del Ultramundo. Fuiste capaz de observar los áridos vientos desérticos y el movimiento de las turbas de zombies. Gracias a la agudeza de tus observaciones hoy gozarás de un bonus en tus excavaciones.</target>
       </segment>
     </unit>
     <unit id="yuD1sSM">
