--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -8013,7 +8013,7 @@
       </notes>
       <segment>
         <source>Bürger in dieser Zone</source>
-        <target>Habitantes en el sector</target>
+        <target>Habitantes presentes</target>
       </segment>
     </unit>
     <unit id="wVNJv3." name="Camping">
