--- a/translations/global+intl-icu.es.xlf
+++ b/translations/global+intl-icu.es.xlf
@@ -4218,7 +4218,7 @@
       </notes>
       <segment>
         <source>Du hast diese Aktion bereits zu oft durchgeführt. Warte eine Weile und versuche es dann erneut.</source>
-        <target>Du hast diese Aktion bereits zu oft durchgeführt. Warte eine Weile und versuche es dann erneut.</target>
+        <target>Estás intentando volver a hacer esto demasiado pronto. Inténtalo de nuevo en unos minutos.</target>
       </segment>
     </unit>
   </file>
