--- a/translations/global+intl-icu.es.xlf
+++ b/translations/global+intl-icu.es.xlf
@@ -4203,18 +4203,18 @@
       <notes>
         <note category="german">Support-Postfach</note>
         <note category="from">twig:///templates/ajax/pm/view.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Support-Postfach</source>
-        <target>Support-Postfach</target>
+        <target>Contacto con el Soporte</target>
       </segment>
     </unit>
     <unit id="l1ILLYu">
       <notes>
         <note category="german">Du hast diese Aktion bereits zu oft durchgeführt. Warte eine Weile und versuche es dann erneut.</note>
         <note category="from">twig:///templates/scripts/errors/generic.txt.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Du hast diese Aktion bereits zu oft durchgeführt. Warte eine Weile und versuche es dann erneut.</source>
