--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -4584,7 +4584,7 @@
       </notes>
       <segment>
         <source>Wenn du eine Seele trotz der Import-Einstränkungen vollständig importieren möchtest, hast du &lt;b&gt;einmalig&lt;/b&gt; die Option, deine MyHordes-Seele zurückzusetzen.</source>
-        <target><![CDATA[Si quieres importar enteramente un alma a pesar de las restricciones para importar, tienes la opción de <b>una sola vez</b> de reiniciar tu alma de MyHordes.]]></target>
+        <target><![CDATA[Si quieres importar completamente un alma a pesar de las restricciones para la importación, puedes reiniciar tu alma de MyHordes <b>una sola vez</b>.]]></target>
       </segment>
     </unit>
     <unit id="dsL.BQg" name="Folgende Aspekte deiner Seele sind von diesem Reset &lt;b&gt;betroffen&lt;/b&gt;:">
@@ -4604,7 +4604,7 @@
       </notes>
       <segment>
         <source>Deine nach dem Ende der Alpha-Phase auf MyHordes erworbenen Seelenpunkte</source>
-        <target>Tus puntos de alma obtenidos luego del fin de la fase alfa en MyHordes</target>
+        <target>Tus puntos de alma obtenidos después del fin de la fase Alfa en MyHordes</target>
       </segment>
     </unit>
     <unit id="wRK8LRh">
@@ -4614,7 +4614,7 @@
       </notes>
       <segment>
         <source>Deine nach dem Ende der Alpha-Phase im Rahmen von Städten erworbenen Auszeichnungen (einschließlich Ranking-Auszeichnungen, die am Ende einer Saison vergeben werden!)</source>
-        <target>Tus distinciones obtenidas en pueblos luego del fin de la fase alfa (¡incluyendo distinciones de la clasificación dadas al final de una temporada!)</target>
+        <target>Tus distinciones obtenidas en pueblos después del fin de la fase Alfa (¡Incluso las distinciones por la clasificación al final de la temporada!)</target>
       </segment>
     </unit>
     <unit id="qGQ4apv" name="Folgende Aspekte deiner Seele sind von diesem Reset &lt;b&gt;nicht betroffen&lt;/b&gt;:">
@@ -4634,7 +4634,7 @@
       </notes>
       <segment>
         <source>Die Liste deiner bisher auf MyHordes gespielten Städte mit allen angehängten Informationen (Todesart, letzte Worte, überlebte Tage, etc)</source>
-        <target>La lista de tus pueblos jugados en MyHordes hasta ahora con toda la información adjunta (causa de muerte, últimas palabras, días sobrevividos, etc).</target>
+        <target>La lista de tus pueblos jugados en MyHordes hasta ahora y su información relacionada (causa de muerte, últimas palabras, días sobrevividos, etc).</target>
       </segment>
     </unit>
     <unit id="VUNm4fP" name="Spezielle Auszeichnungen, wie beispielsweise die Alpha-Auszeichnung">
@@ -4644,7 +4644,7 @@
       </notes>
       <segment>
         <source>Spezielle Auszeichnungen, wie beispielsweise die Alpha-Auszeichnung</source>
-        <target>Distinciones especiales, como la distinción Alfa</target>
+        <target>Las distinciones especiales, como la distinción Alfa</target>
       </segment>
     </unit>
     <unit id="gYtpBfG" name="Gegenstände in deinem spiritueller Rucksack">
@@ -4654,7 +4654,7 @@
       </notes>
       <segment>
         <source>Gegenstände in deinem spiritueller Rucksack</source>
-        <target>Objetos en tu mochila espiritual</target>
+        <target>Los objetos en tu mochila espiritual</target>
       </segment>
     </unit>
     <unit id="E2LwrUJ" name="Deine gespielten Heldentage">
@@ -4664,7 +4664,7 @@
       </notes>
       <segment>
         <source>Deine gespielten Heldentage</source>
-        <target>El número de días que jugaste como un héroe</target>
+        <target>La cantidad de días de héroe acumulados</target>
       </segment>
     </unit>
     <unit id="K1yAZOB" name="Seelenpunkte oder Auszeichnungen, die du importiert hast">
@@ -4674,7 +4674,7 @@
       </notes>
       <segment>
         <source>Seelenpunkte oder Auszeichnungen, die du importiert hast</source>
-        <target>Puntos de alma o distinciones que has importado</target>
+        <target>Los puntos de alma o las distinciones que hayas importado</target>
       </segment>
     </unit>
     <unit id="VEBXP0O" name="Meine Seele zurücksetzen">
